# lstm-visual-servoing-old

./: .gitignore  CMakeLists.txt  package.xml
launch/: pickup_drop.launch  record.launch
msg/: Control.msg  Recorder.msg
src/: record.py  run.py  state_machine.py  train.py  user_input.py  utils.py
src/pytorch/: __init__.py  control_loss.py  dataset.py  model.py  train_manager.py  visual_servo.py
